--- a/app/css/all.css
+++ b/app/css/all.css
@@ -101,6 +101,8 @@ p { margin-bottom: 24px; }
 
 .header .navbar-brand { margin-right: 76px; }
 
+.header .navbar-brand img { width: 114px; height: 50px; }
+
 @media (max-width: 991.98px) { .header .navbar-brand { margin-right: auto; } }
 
 .header .navbar-toggler { border-color: #ccc; padding: 7px  5px; outline: none; }
